--- a/src/pages/detail/secondary/index.less
+++ b/src/pages/detail/secondary/index.less
@@ -50,10 +50,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-
-    span {
-      font-family: PingFangSC-Regular;
-    }
   }
 
   .unread {
@@ -72,5 +68,6 @@
     min-height: 443px;
     padding-top: 170px;
     text-align: center;
+    color: @text-color-primary;
   }
 }
