--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -3,14 +3,14 @@
 &.light {
   .login-wrapper {
     background-color: white;
-    background-image: url('@/assets/login-bg-white.png');
+    background-image: url('@/assets/assets-login-bg-white.png');
   }
 }
 
 &.dark {
   .login-wrapper {
     background-color: @bg-color-page;
-    background-image: url('@/assets/login-bg-black.png');
+    background-image: url('@/assets/assets-login-bg-black.png');
   }
 }
 
@@ -24,18 +24,13 @@
 
 .login-container {
   position: absolute;
-  top: 14%;
+  top: 22%;
   left: 5%;
   min-height: 500px;
   line-height: 22px;
 }
 
 .title-container {
-  .icon {
-    width: 56px;
-    margin-bottom: 32px;
-  }
-
   .title {
     font-size: 36px;
     line-height: 44px;
