--- a/src/style/theme/light.less
+++ b/src/style/theme/light.less
@@ -45,20 +45,20 @@
   --td-success-color-9: #044F2A;
   --td-success-color-10: #033017;
 
-  --td-gray-color-1: #F3F3F3;
-  --td-gray-color-2: #EEEEEE;
-  --td-gray-color-3: #E7E7E7;
-  --td-gray-color-4: #DCDCDC;
-  --td-gray-color-5: #C5C5C5;
-  --td-gray-color-6: #A6A6A6;
-  --td-gray-color-7: #8B8B8B;
-  --td-gray-color-8: #777777;
-  --td-gray-color-9: #5E5E5E;
-  --td-gray-color-10: #4B4B4B;
-  --td-gray-color-11: #383838;
-  --td-gray-color-12: #2C2C2C;
-  --td-gray-color-13: #242424;
-  --td-gray-color-14: #181818;
+  --td-gray-color-1: #f1f2f5;
+  --td-gray-color-2: #ebedf1;
+  --td-gray-color-3: #e3e6eb;
+  --td-gray-color-4: #d6dbe3;
+  --td-gray-color-5: #bcc4d0;
+  --td-gray-color-6: #97a3b7;
+  --td-gray-color-7: #7787a2;
+  --td-gray-color-8: #5f7292;
+  --td-gray-color-9: #4b5b76;
+  --td-gray-color-10: #3c485c;
+  --td-gray-color-11: #2c3645;
+  --td-gray-color-12: #232a35;
+  --td-gray-color-13: #1c222b;
+  --td-gray-color-14: #13161b;
 
   // 文字 & 图标 颜色
   --td-font-white-1: rgba(255, 255, 255, 1);
