--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -16,7 +16,7 @@
 
   > .t-layout {
     flex: 1;
-    min-width: 760px; // 992 - 232
+    min-width: 760px;
   }
 }
 
@@ -28,6 +28,11 @@
     display: flex;
     flex-direction: column;
   }
+  
+  &-main-wrapper{
+    height: 500px;
+    overflow: scroll;
+  }
 
   &-side-nav-layout {
     &-relative {
@@ -35,8 +40,13 @@
     }
   }
 
+  &-layout{
+    height: calc(100vh - 64px);
+    overflow-y: scroll;
+  }
+
   &-content-layout {
-    margin: @spacer-3;
+    padding: @spacer-3;
   }
 
   &-footer-layout {
